<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_itemList" />
        <item
            android:id="@+id/nav_GPS"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_GPS" />
        <item
            android:id="@+id/nav_loc"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_location" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
